inner table with 7 rows

--- a/email.html
+++ b/email.html
@@ -12,6 +12,37 @@
     	<table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#efe1b0">
         	<tr>
         		<td>
+        			<table class="container" width="640" align="center" border="0" cellspacing="0" cellpadding="0">
+        				<tr>
+        					<td>
+        					</td>
+        				</tr><!-- row 1 -->
+        				<tr>
+        					<td>
+        					</td>
+        				</tr><!-- row 2 -->
+        				<tr>
+        					<td>
+        					</td>
+        				</tr><!-- row 3 -->
+        				<tr>
+        					<td>
+        					</td>
+        				</tr><!-- row 4 -->
+        				<tr>
+        					<td>
+        					</td>
+        				</tr><!-- row 5 -->
+        				<tr>
+        					<td>
+        					</td>
+        				</tr><!-- row 6 -->
+        				<tr>
+        					<td>
+        					</td>
+        				</tr><!-- row 7 -->
+        			</table> <!-- inner table -->	
+
         		</td>
         	</tr>
         </table><!-- outer table -->
