centers first row - logo

--- a/email.html
+++ b/email.html
@@ -14,7 +14,13 @@
         		<td>
         			<table class="container" width="640" align="center" border="0" cellspacing="0" cellpadding="0">
         				<tr>
-        					<td>
+        					<td valign="top" class="logo" bgcolor="#ffffff" style="padding:10px 20px 0px 30px; border-left:1px solid #dbc064;
+                            border-right:1px solid #dbc064; border-top:1px solid #dbc064;">
+                            <a href="#">
+                                <img src="images/logovineyard.gif" alt="vineyard" width="585" height="45" border="0">
+                            </a>
+
+
         					</td>
         				</tr><!-- row 1 -->
         				<tr>
