--- a/email.html
+++ b/email.html
@@ -17,17 +17,18 @@
         					<td valign="top" class="logo" bgcolor="#ffffff" style="padding:10px 20px 0px 30px; border-left:1px solid #dbc064;
                             border-right:1px solid #dbc064; border-top:1px solid #dbc064;">
                             <a href="#">
-                                <img src="images/logovineyard.gif" alt="vineyard" width="585" height="45" border="0">
+                                <img style="margin-left-15px;" src="images/logovineyard.gif" alt="vineyard" width="585" height="45" border="0">
                             </a>
-
-
-        					</td>
+                            </td>
         				</tr><!-- row 1 -->
-        				<tr>
-        					<td>
+        				
+                        <tr>
+        					<td valign="top" class="headline" bgcolor="#ffffff" style="padding:15px 20px 5px 30px; border-left:1px solid #dbc064; border-right:1px solid #dbc064; font-family: Arial, Helvetic, sans-serif; font-size:16px; line-height:22px;">
+                                <h1 style="margin:0px 0px 15px 0px; font-weight:normal; font-size:32px; color:#723c7f;">Main heading</h1>
         					</td>
         				</tr><!-- row 2 -->
-        				<tr>
+        				
+                        <tr>
         					<td>
         					</td>
         				</tr><!-- row 3 -->
