third row banner

--- a/email.html
+++ b/email.html
@@ -29,10 +29,15 @@
         				</tr><!-- row 2 -->
         				
                         <tr>
-        					<td>
+        					<td valign="top" bgcolor="#f5f2e5" class="banner" style="border-left:1px solid #dbc064; border-right:1px solid #dbc064;">
+                                <img src="images/vineyardbannerlarge.png" width="638" height="180" alt="Photo of Vineyard">
+
+
+
         					</td>
         				</tr><!-- row 3 -->
-        				<tr>
+        				
+                        <tr>
         					<td>
         					</td>
         				</tr><!-- row 4 -->
