banner content row 4

--- a/email.html
+++ b/email.html
@@ -32,13 +32,18 @@
         					<td valign="top" bgcolor="#f5f2e5" class="banner" style="border-left:1px solid #dbc064; border-right:1px solid #dbc064;">
                                 <img src="images/vineyardbannerlarge.png" width="638" height="180" alt="Photo of Vineyard">
 
-
-
-        					</td>
+                        	</td>
         				</tr><!-- row 3 -->
         				
                         <tr>
-        					<td>
+        					<td valign="top" bgcolor="#f5f2e5" class="content" style="padding:30px 30px 10px 30px; border-right:1px solid #dbc064; border-left:1px solid #dbc064; font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:22px; color:#654308;">
+                                   Lorem ipsum dolor sit amet consec tetur adip isicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercita tion ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum eu fugiat nulla.
+                                    <br><br>
+                                    Enjoy,
+                                    <br>
+                                    <img src="images/stefansignature.gif" width="90" height="40"> 
+
+
         					</td>
         				</tr><!-- row 4 -->
         				<tr>
