promo rows with two tables one for each promo

--- a/email.html
+++ b/email.html
@@ -43,11 +43,37 @@
                                     <br>
                                     <img src="images/stefansignature.gif" width="90" height="40"> 
 
-
         					</td>
         				</tr><!-- row 4 -->
-        				<tr>
-        					<td>
+        				
+                        <tr>
+        					<td valign="top" bgcolor="#f5f2e5" class="promos" style="padding: 10px 30px 25px 30px; border-right:1px solid #dbc064; border-left:1px solid #dbc064; background-color:#f5f2e5; font-family: Arial, Helvetica, sans-serif;">
+                                <table class="promo1" align="left" width="274">
+                                    <tr>
+                                        <td>
+                                            <img class="promo" alt="Promo1" src="images/promo1.png">
+                                            <h3 style="font-size:16px;">Promo heading</h3>
+                                            Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore magna aliqua elit sed do eiusmod.
+                                            <br><br>
+                                            <a href="#">Learn more</a>
+
+                                        </td>
+                                    </tr>
+                                </table>
+                                <table class="promo2" align="right" width="274">
+                                    <tr>
+                                        <td>
+                                            <img class="promo" alt="Promo2" src="images/promo2.png">
+                                            <h3 style="font-size:16px;">Promo heading</h3>
+                                            Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore magna aliqua elit sed do eiusmod.
+                                            <br><br>
+                                            <a href="#">Learn more</a>
+
+                                        </td>
+                                    </tr>
+                                </table>
+
+
         					</td>
         				</tr><!-- row 5 -->
         				<tr>
