--- a/email.html
+++ b/email.html
@@ -77,8 +77,44 @@
         					</td>
         				</tr><!-- row 5 -->
         				<tr>
-        					<td>
-        					</td>
+        					<td valign="top" bgcolor="#55315d" class="callout" style="background-color:#55315d; padding:30px; border-right:1px solid #dbc064; border-left:1px solid #dbc064; border-bottom:1px solid #dbc064;">
+                                <table class="callout1" width="135" align="left" border="0" cellpadding="0" cellspacing="0" style="padding-left:10px; padding-right:10px; font-family:Arial, Helvetica, sans-serif; font-size:13px; line-height:16px; color:#ffffff;">
+                                    <tr>
+                                        <td>
+                                            <img src="images/grape.gif" width="75" height="75"><br/>
+                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
+                                            <a href="#">Learn more</a>   
+                                        </td>
+                                    </tr>
+                                </table>
+                                <table class="callout2" width="135" align="left" border="0" cellpadding="0" cellspacing="0" style="padding-left:10px; padding-right:10px; font-family:Arial, Helvetica, sans-serif; font-size:13px; line-height:16px; color:#ffffff;">
+                                    <tr>
+                                        <td>
+                                            <img src="images/bottle.gif" width="75" height="75"><br/>
+                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
+                                            <a href="#">Learn more</a>   
+                                        </td>
+                                    </tr>
+                                </table>
+                                <table class="callout3" width="135" align="left" border="0" cellpadding="0" cellspacing="0" style="padding-left:10px; padding-right:10px; font-family:Arial, Helvetica, sans-serif; font-size:13px; line-height:16px; color:#ffffff;">
+                                    <tr>
+                                        <td>
+                                            <img src="images/cork.gif" width="75" height="75"><br/>
+                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
+                                            <a href="#">Learn more</a>   
+                                        </td>
+                                    </tr>
+                                </table>
+                                <table class="callout4" width="135" align="left" border="0" cellpadding="0" cellspacing="0" style="padding-left:10px; padding-right:10px; font-family:Arial, Helvetica, sans-serif; font-size:13px; line-height:16px; color:#ffffff;">
+                                    <tr>
+                                        <td>
+                                            <img src="images/man.gif" width="75" height="75"><br/>
+                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
+                                            <a href="#">Learn more</a>   
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
         				</tr><!-- row 6 -->
         				<tr>
         					<td>
