adds a clear float to the tables row

--- a/email.html
+++ b/email.html
@@ -114,6 +114,8 @@
                                         </td>
                                     </tr>
                                 </table>
+                                <br style="clear:both;">
+
                             </td>
         				</tr><!-- row 6 -->
         				<tr>
