--- a/email.html
+++ b/email.html
@@ -119,7 +119,16 @@
                             </td>
         				</tr><!-- row 6 -->
         				<tr>
-        					<td>
+        					<td valign="top" class="footer" style="padding: 10px 0px 30px 0px; font-family: Arial, Helvetica, sans-serif; font-size: 11px; color: #b2a16e;">
+
+                                &copy; Stefan Inc. PLEASE DO NOT REPLY TO THIS MESSAGE:
+                                <br><br>
+                                Your <a href="#" style="color:#000000;">privacy</a> is important to us. Please use this link to <a href="#" style="color:#000000;">unsubscribe</a>.
+                                <br><br>
+                                Lorem ipsum dolor sit amet consectetur adipi sicing elit sed do eiusmod tempor inci didunt ut labore et dolore iqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+
+
         					</td>
         				</tr><!-- row 7 -->
         			</table> <!-- inner table -->	
