makes promo links into buttons

--- a/email.html
+++ b/email.html
@@ -55,7 +55,7 @@
                                             <h3 style="font-size:16px;">Promo heading</h3>
                                             Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore magna aliqua elit sed do eiusmod.
                                             <br><br>
-                                            <a href="#">Learn more</a>
+                                            <a href="#" style="background-color:#71a412; border-radius:5px; color:#fff; padding:5px 10px 5px 10px; text-decoration:none; text-shadow:0px 2px 2px #3a5606;">Learn more</a>
 
                                         </td>
                                     </tr>
@@ -67,7 +67,7 @@
                                             <h3 style="font-size:16px;">Promo heading</h3>
                                             Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore magna aliqua elit sed do eiusmod.
                                             <br><br>
-                                            <a href="#">Learn more</a>
+                                            <a href="#" style="background-color:#71a412; border-radius:5px; color:#fff; padding:5px 10px 5px 10px; text-decoration:none; text-shadow:0px 2px 2px #3a5606;">Learn more</a>
 
                                         </td>
                                     </tr>
