--- a/email.html
+++ b/email.html
@@ -37,6 +37,15 @@
         				
                         <tr>
         					<td valign="top" bgcolor="#f5f2e5" class="content" style="padding:30px 30px 10px 30px; border-right:1px solid #dbc064; border-left:1px solid #dbc064; font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:22px; color:#654308;">
+                                   <table width="160" align="right" class="button" style="margin:0px 0px 10px 30px;">
+                                        <tr>
+                                            <td style="text-align:center; background-color:#71a412; padding:10px 15px; border-radius:5px;">
+                                                <a href="#" style="color:#fff; font-size:18px; letter-spacing:1px; text-decoration:none;
+                                                text-shadow:0px 2px 2px #3a5606; font-family:Arial, Helvetica, sans-serif;">Learn more</a>
+                                            </td>
+                                        </tr>
+                                    </table>
+
                                    Lorem ipsum dolor sit amet consec tetur adip isicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercita tion ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum eu fugiat nulla.
                                     <br><br>
                                     Enjoy,
@@ -83,7 +92,7 @@
                                         <td>
                                             <img src="images/grape.gif" width="75" height="75"><br/>
                                             Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
-                                            <a href="#">Learn more</a>   
+                                            <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
                                     </tr>
                                 </table>
@@ -92,7 +101,7 @@
                                         <td>
                                             <img src="images/bottle.gif" width="75" height="75"><br/>
                                             Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
-                                            <a href="#">Learn more</a>   
+                                            <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
                                     </tr>
                                 </table>
@@ -101,7 +110,7 @@
                                         <td>
                                             <img src="images/cork.gif" width="75" height="75"><br/>
                                             Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
-                                            <a href="#">Learn more</a>   
+                                            <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
                                     </tr>
                                 </table>
@@ -110,7 +119,7 @@
                                         <td>
                                             <img src="images/man.gif" width="75" height="75"><br/>
                                             Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
-                                            <a href="#">Learn more</a>   
+                                            <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
                                     </tr>
                                 </table>
