--- a/email.html
+++ b/email.html
@@ -4,6 +4,28 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Our Vineyard</title>
         <style type="text/css">
+
+            @media only screen and (max-width: 660px) {
+                table.container { width:  480px !important;}
+                td.logo img { display: none; }
+                td.logo { 
+                    background: #fff url(images/logovineyardmed.gif) no-repeat 10px 10px; 
+                    height: 45px;
+                }
+
+
+            }
+
+            @media only screen and (max-width: 510px) {
+                table.container { width: 100% !important; }
+                table.container td { border:none !important; }
+                td.logo {
+                    background: #fff url(images/logovineyardsmall.gif) no-repeat center 10px;
+                    height: 32px;
+                }
+            
+
+            }
             
         </style>
     </head>
