--- a/email.html
+++ b/email.html
@@ -12,6 +12,15 @@
                     background: #fff url(images/logovineyardmed.gif) no-repeat 10px 10px; 
                     height: 45px;
                 }
+                td.headline { padding-bottom: 5px 0px 0px 30px !important;}
+                td.headline h1 { font-size: 28px !important; }
+
+                td.banner img { display: none; }
+                td.banner {
+                    width: 480px;
+                    height: 150px;
+                    background: url(images/vineyardbannermed.png) no-repeat 0px 0px;
+                }
 
 
             }
@@ -23,7 +32,8 @@
                     background: #fff url(images/logovineyardsmall.gif) no-repeat center 10px;
                     height: 32px;
                 }
-            
+                td.headline h1 { font-size: 24px !important; text-align: center; }
+                td.banner { height: 115px background: url(images/vineyardbannersmall.png) no-repeat right 0px;}
 
             }
             
