content class and footer for med and small screens

--- a/email.html
+++ b/email.html
@@ -21,6 +21,9 @@
                     height: 150px;
                     background: url(images/vineyardbannermed.png) no-repeat 0px 0px;
                 }
+                td.content { padding-bottom:30px !important;}
+                td.content table.button { width: auto;}
+                td.content table.button td a { font-size: 14px !important; }
 
 
             }
@@ -34,6 +37,9 @@
                 }
                 td.headline h1 { font-size: 24px !important; text-align: center; }
                 td.banner { height: 115px background: url(images/vineyardbannersmall.png) no-repeat right 0px;}
+
+                td.content { line-height: 20px !important; padding-bottom: 10px !important; }
+                td.footer { padding: 20px 30px !important; }
 
             }
             
