promos class for med and small screens

--- a/email.html
+++ b/email.html
@@ -24,6 +24,17 @@
                 td.content { padding-bottom:30px !important;}
                 td.content table.button { width: auto;}
                 td.content table.button td a { font-size: 14px !important; }
+                td.promos table { width: 200px !important; }
+                td.promos table td h3 { margin-bottom: 8px; }
+                td.promos table td img { display: none; }
+                td.promos table.promo1 td {
+                    background: url(images/promo1small.png) no-repeat 0px 0px;
+                    padding: 100px 0px 0px 0px;
+                }
+                td.promos table.promo2 td {
+                    background: url(images/promo2small.png) no-repeat 0px 0px;
+                    padding: 100px 0px 0px 0px;
+                }
 
 
             }
@@ -40,6 +51,17 @@
 
                 td.content { line-height: 20px !important; padding-bottom: 10px !important; }
                 td.footer { padding: 20px 30px !important; }
+
+                td.promos table.promo1 { width: 100% !important; border-top: 1px solid #71a412; }
+                td.promos table.promo1 td {
+                    background: url(images/promo1mini.png) no-repeat 0px 40px; padding: 20px 0px 40px 110px;
+                }
+                td.promos table.promo2 { width:  100% !important; }
+                td.promos table.promo2 td {
+                    background: url(images/promo2mini.png) no-repeat 0px 20px; padding: 0px 0px 0px 110px; 
+                    clear: left;
+                }
+
 
             }
             
