styles callouts for med screen with media queries

--- a/email.html
+++ b/email.html
@@ -36,6 +36,33 @@
                     padding: 100px 0px 0px 0px;
                 }
 
+                td.callout table { width:  50% !important; margin-bottom: 40px;}
+                td.callout table img { display: none; }
+                td.callout table br { display: none; }
+                td.callout table a { display: block; margin-top: 10px; }
+                td.callout table td { background-size: 65px 65px; }
+                td.callout table.callout1 td {
+                    padding: 0px 30px 0px 60px !important;
+                    background: url(images/grapemed.gif) no-repeat 0px 2px;
+                }
+                td.callout table.callout2 td {
+                    padding: 0px 20px 0px 60px !important;
+                    background: url(images/bottlemed.gif) no-repeat 0px 2px;
+                }
+                td.callout table.callout3 td {
+                    padding:  0px 30px 0px 60px !important;
+                    background: url(images/corkmed.gif) no-repeat 0px 2px;  
+                }
+                td.callout table.callout4 td {
+                    padding: 0px 20px 0px 60px !important;
+                    background: url(images/manmed.gif) no-repeat 0px 2px;
+                }
+
+                td.callout table.callout3 { clear:left;}
+
+
+
+
 
             }
 
