small screen callouts

--- a/email.html
+++ b/email.html
@@ -89,6 +89,19 @@
                     clear: left;
                 }
 
+                td.callout { padding: 20px 30px 0px 30px !important; }
+                td.callout table { width: 100% !important; margin-bottom: 20px;}
+                td.callout table td { 
+                    padding: 0px 0px 10px 50px !important;
+                    background-size: 50px 50pxc !important;
+                    min-height: 60px;
+                }
+                td.callout table a { display: inline;}
+                td.callout table.callout1 td { background-position: -3px -12px; }
+                td.callout table.callout2 td { background-position: -3px -23px; }
+                td.callout table.callout3 td { background-position: -3px -16px; }
+                td.callout table.callout4 td { background-position: -3px -23px; }
+
 
             }
             
