adds a class of spacer to send link to next line and repositions imgs

--- a/email.html
+++ b/email.html
@@ -97,12 +97,12 @@
                     min-height: 60px;
                 }
                 td.callout table a { display: inline;}
-                td.callout table.callout1 td { background-position: -3px -12px; }
-                td.callout table.callout2 td { background-position: -3px -23px; }
-                td.callout table.callout3 td { background-position: -3px -16px; }
-                td.callout table.callout4 td { background-position: -3px -23px; }
+                td.callout table.callout1 td { background-position: -3px -7px; }
+                td.callout table.callout2 td { background-position: -3px -7px; }
+                td.callout table.callout3 td { background-position: -3px -7px; }
+                td.callout table.callout4 td { background-position: -3px -7px; }
 
-
+                td.callout table br.spacer { display: inline;}
             }
             
         </style>
@@ -191,7 +191,7 @@
                                     <tr>
                                         <td>
                                             <img src="images/grape.gif" width="75" height="75"><br/>
-                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
+                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br class="spacer">
                                             <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
                                     </tr>
@@ -200,7 +200,7 @@
                                     <tr>
                                         <td>
                                             <img src="images/bottle.gif" width="75" height="75"><br/>
-                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
+                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br class="spacer">
                                             <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
                                     </tr>
@@ -209,7 +209,7 @@
                                     <tr>
                                         <td>
                                             <img src="images/cork.gif" width="75" height="75"><br/>
-                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
+                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br class="spacer">
                                             <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
                                     </tr>
@@ -218,7 +218,7 @@
                                     <tr>
                                         <td>
                                             <img src="images/man.gif" width="75" height="75"><br/>
-                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br>
+                                            Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br class="spacer">
                                             <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
                                     </tr>
