--- a/email.html
+++ b/email.html
@@ -5,6 +5,8 @@
         <title>Our Vineyard</title>
         <style type="text/css">
 
+            body {margin:0; padding: 0;}
+
             @media only screen and (max-width: 660px) {
                 table.container { width:  480px !important;}
                 td.logo img { display: none; }
