--- a/email.html
+++ b/email.html
@@ -111,6 +111,12 @@
     </head>
     <body bgcolor="#efe1b0">
 
+        <div style="font-size:1px; color: #efe1b0; display:none;">
+            Preview message. This will show in mmost email clients as the preview text in the inbox. Also
+            make sure is long enough to take up all of the space available by your chosen email client
+
+        </div>  
+
     	<table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#efe1b0">
         	<tr>
         		<td>
