adds google web fonts to heading, fallback arial;

--- a/email.html
+++ b/email.html
@@ -5,6 +5,8 @@
         <title>Our Vineyard</title>
         <style type="text/css">
 
+            @import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two);
+
             body {margin:0; padding: 0;}
 
             @media only screen and (max-width: 660px) {
@@ -132,7 +134,7 @@
         				
                         <tr>
         					<td valign="top" class="headline" bgcolor="#ffffff" style="padding:15px 20px 5px 30px; border-left:1px solid #dbc064; border-right:1px solid #dbc064; font-family: Arial, Helvetic, sans-serif; font-size:16px; line-height:22px;">
-                                <h1 style="margin:0px 0px 15px 0px; font-weight:normal; font-size:32px; color:#723c7f;">Main heading</h1>
+                                <h1 style="margin:0px 0px 15px 0px; font-weight:normal; font-family:'Shadows Into Light Two', Arial; font-size:32px; color:#723c7f;">Main heading</h1>
         					</td>
         				</tr><!-- row 2 -->
         				
