--- a/email.html
+++ b/email.html
@@ -160,7 +160,7 @@
                                     <br><br>
                                     Enjoy,
                                     <br>
-                                    <img src="images/stefansignature.gif" width="90" height="40"> 
+                                    <img alt="signature" src="images/stefansignature.gif" width="90" height="40"> 
 
         					</td>
         				</tr><!-- row 4 -->
@@ -200,7 +200,7 @@
                                 <table class="callout1" width="135" align="left" border="0" cellpadding="0" cellspacing="0" style="padding-left:10px; padding-right:10px; font-family:Arial, Helvetica, sans-serif; font-size:13px; line-height:16px; color:#ffffff;">
                                     <tr>
                                         <td>
-                                            <img src="images/grape.gif" width="75" height="75"><br/>
+                                            <img alt="grapes" src="images/grape.gif" width="75" height="75"><br>
                                             Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br class="spacer">
                                             <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
@@ -209,7 +209,7 @@
                                 <table class="callout2" width="135" align="left" border="0" cellpadding="0" cellspacing="0" style="padding-left:10px; padding-right:10px; font-family:Arial, Helvetica, sans-serif; font-size:13px; line-height:16px; color:#ffffff;">
                                     <tr>
                                         <td>
-                                            <img src="images/bottle.gif" width="75" height="75"><br/>
+                                            <img alt="bottle" src="images/bottle.gif" width="75" height="75"><br>
                                             Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br class="spacer">
                                             <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
@@ -218,7 +218,7 @@
                                 <table class="callout3" width="135" align="left" border="0" cellpadding="0" cellspacing="0" style="padding-left:10px; padding-right:10px; font-family:Arial, Helvetica, sans-serif; font-size:13px; line-height:16px; color:#ffffff;">
                                     <tr>
                                         <td>
-                                            <img src="images/cork.gif" width="75" height="75"><br/>
+                                            <img alt="cork" src="images/cork.gif" width="75" height="75"><br>
                                             Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br class="spacer">
                                             <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
@@ -227,7 +227,7 @@
                                 <table class="callout4" width="135" align="left" border="0" cellpadding="0" cellspacing="0" style="padding-left:10px; padding-right:10px; font-family:Arial, Helvetica, sans-serif; font-size:13px; line-height:16px; color:#ffffff;">
                                     <tr>
                                         <td>
-                                            <img src="images/man.gif" width="75" height="75"><br/>
+                                            <img alt="man" src="images/man.gif" width="75" height="75"><br>
                                             Lorem ipsum dolor sit amet conctetur adipi eiu smod incid amet idun.<br><br class="spacer">
                                             <a href="#" style="color:#efe1b0;">Learn more</a>   
                                         </td>
